Fixing the navbar issue width on mobile view.

--- a/app/assets/stylesheets/application_custom.css.less
+++ b/app/assets/stylesheets/application_custom.css.less
@@ -3,8 +3,7 @@
   float: none;
   padding: 9px 10px 11px;
   line-height: 19px;
-  color: 
-  #999;
+  color: #999;
   text-decoration: none;
   text-shadow: 0 -1px 0 
   rgba(0, 0, 0, 0.25);
